--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <img src="marco/3.png" alt="Cómic">
       <p>Adobe</p>
     </a>
-    <a href="Diplomas-comic.html" class="boton-grupo">
+    <a href="Diplomas-cómic.html" class="boton-grupo">
       <img src="marco/4.png" alt="Diplomas-cómic">
       <p>Diplomas y cómic</p>
     </a>
